--- a/lab_5/index.html
+++ b/lab_5/index.html
@@ -289,7 +289,7 @@
         for (let i = 0; i < countries.length; i += 1) {
           items[i] = countries[i].name;
         }
-        text = "<ul>";
+        text = "<ol>";
         let num = 0;
 
         for (i = 0; i < 50; i++) {
@@ -297,7 +297,7 @@
           num = Math.floor(Math.random() * 243);
           text += "<li>" + items[num] + "</li>";
         }
-        text += "</ul>";
+        text += "</ol>";
 
         document.getElementsByTagName("ul")[0].innerHTML = text;
       }
