--- a/lab_5/index.html
+++ b/lab_5/index.html
@@ -299,7 +299,7 @@
         }
         text += "</ol>";
 
-        document.getElementsByTagName("ul")[0].innerHTML = text;
+        document.getElementsByTagName("ol")[0].innerHTML = text;
       }
     </script>
   </body>
