--- a/lab_6_ajax/callback_demo.html
+++ b/lab_6_ajax/callback_demo.html
@@ -11,7 +11,11 @@
     <div class="wrapper">
       <div class="header">Test AJAX page</div>
       <button class="button" onclick="loadData()">Load Some JSON</button>
-      <div class="content"></div>
+      <div class="content">
+        <ol>
+
+        </ol>
+      </div>
       <div class="footer"></div>
     </div>
   </div>
@@ -24,23 +28,18 @@
            return arbitrary_variable_name.json()}) // gotta parse a string into an object! Here's how
         .then(res => {
           console.log(res);
-          let items = [243];
-        for (let i = 0; i < res.length; i += 1) {
-          items[i] = res[i].name;
-        }
-        console.log(items);
         text = "<ol>";
         let num = 0;
 
         for (i = 0; i < 15; i++) {
           //this logic of adding list items is from w3schools JS arrays
           num = Math.floor(Math.random() * 243);
-          text += "<li>" + items[num] + "</li>";
+          text += "<li>" + res[num].name + "," +res[num].code  + "</li>";
         }
         text += "</ol>";
 
         document.getElementsByTagName("ol")[0].innerHTML = text;
-          return res;
+          return text;
         })
         .then(res => res) // here we're just passing along res in a shorter format
         .then(res => res.map(c => c.code)) // // Gotta know what values are available on the response - get this from your API
