--- a/lab_6_ajax/index.html
+++ b/lab_6_ajax/index.html
@@ -11,13 +11,16 @@
     <div class="wrapper">
       <div class="header">Test AJAX page</div>
       <button class="button" onclick="loadData()">Load Some JSON</button>
-      <div class="content"></div>
+      <div class="content">
+        <ol>
+
+        </ol>
+      </div>
       <div class="footer"></div>
     </div>
   </div>
   <script>
     function loadData() {
-      function loadData() {
       // What ARE promises? 
       fetch('ajax_sample.json')
         .then(arbitrary_variable_name => {
@@ -84,7 +87,7 @@
       }, 2000) // this will take 2000ms or 2 sec to execute
     console.log(animal); // this will show undefined when it executes
     // because the "outer context" will not update for two seconds.
-    }
+
   </script>
 </body>
 
